[package]
name = "polkadot-tx-examples"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "utils"
path = "src/utils/lib.rs"
edition = "2018"

[dependencies]
anyhow = "1.0.43"
frame-metadata = { version = "14.0.0-rc.2", features = ["v13"] }
hex = "0.4.3"
parity-scale-codec = "2.2.0"
reqwest = { version = "0.11.4", features = ["json"] }
serde = "1"
serde_json = "1"
tokio = { version = "1.10.0", features = ["full"] }

# Various types and functions useful for interacting with substrate exist in these sp (substrate-primitives) crates:
sp_runtime = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "master", package = "sp-runtime" }
sp_core = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "master", package = "sp-core" }
sp_keyring = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "master", package = "sp-keyring" }
sp_version = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "master", package = "sp-version" }

# We'll want some types from the polkadot runtime (concrete instantiation of the above) too:
polkadot_runtime = { version = "0.9.9", git = "https://github.com/paritytech/polkadot.git", branch = "master", package = "polkadot-runtime" }

# There are some types we want in the pallet crates (if we liked, we could just redefine them to save bringing these in):
pallet_balances = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "master", package = "pallet-balances" }
pallet_system = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "master", package = "frame-system" }
